# ModWars

./: CMakeLists.txt  README.md  setuid.sh
attacker/: main.cpp  ptr.hpp  rw.hpp
attacker/kmod/.tmp_versions/: fktest.mod
defender/: main.cpp
judge/: main.cpp
